--- a/globals.css
+++ b/globals.css
@@ -18,12 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #447DE2;
 }
 
 a {
@@ -35,8 +30,9 @@ a {
   box-sizing: border-box;
 }
 
-chatui-chat {
+.chatui-chat {
   height: 100;
+  padding: 1em;
 }
 
 .chatui {
@@ -44,10 +40,7 @@ chatui-chat {
   flex-flow: column wrap;
   justify-content: space-between;
   width: 100%;
-  max-width: 867px;
-  margin: 25px 10px;
-  height: 600px;
-  border: 2px solid #ddd;
+  height: 100%;
   border-radius: 5px;
   box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
 }
@@ -56,7 +49,6 @@ s .chatui-header {
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  border-bottom: 2px solid #ddd;
   background: #eee;
   color: #666;
 }
@@ -64,7 +56,7 @@ s .chatui-header {
 .chatui-chat {
   flex: 1;
   overflow-y: auto;
-  padding: 10px;
+  background-color: transparent;
 }
 
 .chatui-chat::-webkit-scrollbar {
@@ -93,7 +85,7 @@ s .chatui-header {
   max-width: 450px;
   padding: 15px;
   border-radius: 15px;
-  background: #ececec;
+  background: #D9D9D9;
 }
 
 .left-msg .msg-bubble {
@@ -114,43 +106,64 @@ s .chatui-header {
 }
 
 .right-msg .msg-bubble {
-  background: #579ffb;
-  color: #fff;
+  background: #D9D9D9;
+  color: #000000;
   border-bottom-right-radius: 0;
 }
 
 .chatui-inputarea {
   display: flex;
-  padding: 10px;
-  border-top: 2px solid #ddd;
-  background: #eee;
+  padding-left: 10px;
+  background: #020607;
 }
 
 .chatui-inputarea * {
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
+  padding: 20px;
   font-size: 1em;
 }
 
 .chatui-input {
   flex: 1;
-  background: #ddd;
+  background: transparent;
+  color: white;
 }
 
 .chatui-btn {
- margin-left: 10px;
- background: #579ffb;
  color: #fff;
  font-weight: bold;
  cursor: pointer;
- padding: 10px;
+ height: 100%;
 }
 
 .chatui-btn:hover {
- background: #577bfb;
+ color: #447DE2;
 }
 
-.chatui-chat {
-  background-color: #fcfcfe;
+.switch-container {
+  width: 105px;
+  height: 55px;
+  background-color: #ccc;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border-radius: 50px;
+  user-select: none;
 }
+
+.thumb {
+  width: 45px;
+  height: 45px;
+  background-color: white;
+  border-radius: 50%;
+  transform: translateX(5px);
+  transition: transform 0.2s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checked {
+  transform: translateX(55px);
+}
+
